# neural-style-azure

./: .gitignore  Install.txt  Links.txt  README.md
console-client/: NeuralStyle.ConsoleClient.sln  NeuralStyle.ConsoleClient.sln.DotSettings
console-client/src/: NeuralStyle.ConsoleClient.sln
deploy/: confg_log.cmd  copy_extension.cmd  install_extension.cmd  reinstall_extension.cmd  uninstall_extension.cmd
deploy/ExplorerExtension/: NeuralStyle.Core.dll.config  NeuralStyle.ExplorerExtension.dll.config
doc/: Conda.md  Temp.txt  Update.md  az-cli.md  blobxfer.md  blobxfer.txt  docker-miniconda.md  docker.md  fast-neural-style.md  git.md  helpful docker commands.txt  linux.md  markdown.md  nvidia.md  setup fast neural style training.txt  setup host.txt
doc/help/: blobxfer.txt  commands.md  convert models.txt  helpful docker commands.txt
doc/setup/: setup host.md
docker/: .gitignore
docker/3d-photo-inpainting/: Dockerfile  Makefile  utils.py
docker/3d-photo-inpainting/src/: boostmonodepth_utils.py  download_models.py  main.py  mesh.py  pyproject.toml  queueclient.py  show_backend.py  utils.py
docker/3d-photo-stylization/: Dockerfile  Makefile
docker/SRGAN-tensorflow-docker/: Dockerfile  Makefile
docker/flux/: cog.yaml  predicty.py  weights.py
docker/frame-interpolation/: .dockerignore  .gitignore  Dockerfile  Makefile
docker/frame-interpolation/src/: cog.yaml  main.py  predict.py  pyproject.toml  queueclient.py  run.py
docker/mask-transfer/: Dockerfile  Makefile
docker/neural-style-h8-creation-docker/: Makefile
docker/neural-style-pytorch/: Dockerfile  Makefile  test.py
docker/neural-style-tensorflow/: Dockerfile  Dockerfile-1.12.0-gpu-py3  Dockerfile-1.15.0-gpu-py3  LICENSE  Makefile
docker/neural-style-tensorflow-container-instance/: Dockerfile  Makefile
docker/neural-style-tensorflow-docker/: Dockerfile  Makefile  start.sh
docker/neural-style-torch-docker/: Dockerfile  Makefile
docker/neural-style-transfer/: .dockerignore  Dockerfile  Makefile
docker/pytorch-neural-style-transfer/: Dockerfile  LICENSE  Makefile
fast-neural-style-docker/: Dockerfile  Makefile  common.sh  exports.sh  start.sh  trainer.sh
h8-creation/: Makefile
lib/: default.snk
neural-style-docker/: Dockerfile  Makefile  entrypoint.py  start.sh
neural-style-python-docker/: Dockerfile  Makefile  requirements.txt  start.sh
neural-style-service/: .gitignore
setup/: setup host.md  setup host.txt
src/: NeuralStyle.sln  NeuralStyle.sln.DotSettings
web-client/: index.htm
(+178 files in other folders)
