[tool.poetry]
name = "frame-interpolation"
version = "0.1.0"
description = ""
authors = ["Sebastian Betzin <sebastian@betzin.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
mediapy = "^1.0.3"
tensorflow = "==2.6.2"
tensorflow-datasets = "==4.4.0"
tensorflow-addons = "==0.15.0"
numpy = "*"
scikit-image = "^0.19.1"
natsort = "*"
tqdm= "^4.64.1"

piexif = "*"
azure-storage-queue = "*"
azure-storage-blob = "*"
applicationinsights = "*"

cog = "*"

[tool.poetry.dev-dependencies]