[tool.poetry]
name = "frame-interpolation"
version = "0.1.0"
description = ""
authors = ["Sebastian Betzin <sebastian@betzin.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
mediapy = "==1.0.3"
tensorflow = "==2.8.0"
tensorflow-datasets = "==4.8.3"
numpy = "==1.22.4"
scikit-image = "==0.19.3"
natsort = "==8.1.0"
tqdm= "==4.65.0"
protobuf = "==3.20.3"
absl-py = "==1.4.0"
gin-config = "==0.5.0"
google-cloud-bigquery-storage = "==2.19.1"
apache-beam = "==2.46.0"

piexif = "^1.1.3"
azure-storage-queue = "*"
azure-storage-blob = "*"
applicationinsights = "*"

cog = "==0.6.1"

[tool.poetry.dev-dependencies]